--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,12 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-  <my-app>
+
+
+
+  <my-app><!-- SELECTOR FOR THE WHOLE MAIN DASHBOARD-->
+
+
     <!-- WHOLE CODE FOR THE ROLING PROGRESSBAR-->
     <div class="lds-css ng-scope"><div style="width:10%;height:10%;position: absolute;
     top:0;
@@ -73,6 +78,8 @@
 }
 </style></div>
 <!-- PROGRESS CIRCLE CODE END-->
+
+
 </my-app>
 
 
